--- a/src/ITI.SkyLord.TestAvecEntity/config.json
+++ b/src/ITI.SkyLord.TestAvecEntity/config.json
@@ -1,7 +1,13 @@
 {
-  "Data": {
-    "DefaultConnection": {
-      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=aspnet5-ITI.SkyLord.TestAvecEntity-b207e2e8-c88f-448a-9690-7dfdb9cd43c9;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Data": {
+        "DefaultConnection": {
+            "ConnectionString": "Server=127.0.0.1;Port=5432;Database=Tchat;User Id=postgres;Password=dxzdvr;"
+        }
+    },
+    "EntityFramework": {
+        "ApplicationDbContext": {
+            "ConnectionStringKey": "Data:DefaultConnection:ConnectionString"
+        }
     }
-  }
 }
+
