--- a/src/ITI.SkyLord.TestAvecEntity/project.json
+++ b/src/ITI.SkyLord.TestAvecEntity/project.json
@@ -9,6 +9,7 @@
         "Microsoft.AspNet.Server.Kestrel": "1.0.0-beta8",
         "Microsoft.AspNet.StaticFiles": "1.0.0-beta8",
         "Microsoft.AspNet.Mvc.TagHelpers": "6.0.0-beta8",
+        "Microsoft.AspNet.Mvc.Razor": "6.0.0-beta8",
         "Microsoft.Framework.Configuration.Json": "1.0.0-beta8",
         "EntityFramework.Core": "7.0.0-beta8",
         "EntityFramework.SqlServer": "7.0.0-beta8",
