--- a/src/ITI.SkyLord.TestAvecEntity/config.json
+++ b/src/ITI.SkyLord.TestAvecEntity/config.json
@@ -1,7 +1,8 @@
 {
     "Data": {
         "DefaultConnection": {
-            "ConnectionString": "Server=127.0.0.1;Port=5432;Database=Tchat;User Id=postgres;Password=dxzdvr;"
+          "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=LeChat;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;"
+
         }
     },
     "EntityFramework": {
