--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,8 @@ branches:
   - master
 install:
 - ps: Invoke-WebRequest -Uri http://nuget.org/nuget.exe -OutFile $nuget
-before_build:
-- cmd: nuget restore
 - cmd: echo a
+#Script pour installer DNVM
+- ps: @powershell -NoProfile -ExecutionPolicy unrestricted -Command "&{$Branch='dev';iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.ps1'))}"
+before_build:
+- cmd: dnu restore
