--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,5 +6,9 @@ install:
 - cmd: echo a
 - ps: $Branch='dev';iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.ps1'))
 - ps: dnvm upgrade -r coreclr
+- ps: dnvm setup
+- ps: dnvm use -r coreclr
 before_build:
 - ps: dnu restore
+- cmd: cd src\ITI.SkyLord.TestAvecEntity.Tests
+- cmd: dnx test
