--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,8 +6,10 @@ install:
 - cmd: echo a
 - ps: $Branch='dev';iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.ps1'))
 - ps: dnvm upgrade -r coreclr
+- ps: dnvm list
 - ps: dnvm setup
-- ps: dnvm use -r coreclr
+- ps: dnvm use default
+- ps: dnvm list
 before_build:
 - ps: dnu restore
 - cmd: cd src\ITI.SkyLord.TestAvecEntity.Tests
